methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:6: error: not found: value fairecarré
    fairecarré()
    ^